# imx-code-signing-tool

./: .gitignore  COPYING  Release_Notes.txt  Software_Content_Register_CST.txt
examples/csf/: ahab_encrypted_boot.csf  ahab_secure_boot.csf  ahab_secure_boot_certificate.csf  ahab_secure_boot_fast_boot.csf  ahab_secure_boot_hybrid.csf  hab4_encrypted_boot.csf  hab4_fast_authentication.csf  hab4_pkcs11_sign.csf  hab4_secure_boot.csf
examples/signed_message/: ahab-EnableDebug-example-msg.json  ahab-FIPSKeyZeroization-msg.json  ahab-FipsClusterDegrade-example-msg.json  ahab-ReturnLifecycleUpdate-example-msg.json  ahab-SabKeyExchangeKekGenEn-example-msg.json  ahab-SabKeyStoreSecProvisioning-example-msg.json  ahab-SabRootKeKExportEn-example-msg.json  ahab-WriteSecureFuse-example-msg.json  ahab-signed-msg-header-template.json
keys/: add_key.sh  hsm_ahab_pki_tree.sh
src/: BUILD.md  CMakeLists.txt  Dockerfile  Dockerfile.hsm
src/cmake/: compiler_options.cmake  linux-i386-gcc-toolchain.cmake  linux-x86_64-gcc-toolchain.cmake  mingw-w64-i686-toolchain.cmake  mingw-w64-x86_64-toolchain.cmake
src/lib/: CMakeLists.txt
src/lib/back_end/: CMakeLists.txt  adapt_layer_openssl.c  cert.c  engine.c  engine.h  pkey.c  pkey.h  ssl_backend.h  ssl_wrapper.c  ssl_wrapper.h
src/lib/common/: CMakeLists.txt  err.c  err.h  openssl_helper.c  openssl_helper.h  srk_helper.c  srk_helper.h  version.h
src/lib/front_end/: CMakeLists.txt  acst.c  adapt_layer.h  ahab_types.h  arch_types.h  bitops.h  csf.h  csf_cmd_aut_dat.c  csf_cmd_ins_key.c  csf_cmd_misc.c  cst_lexer.l  cst_parser.y  hab_cmd.h  hab_types.h  misc_helper.c  misc_helper.h
src/scripts/: CMakeLists.txt  add_key.bat  ahab_pki_tree.bat  ahab_pki_tree.sh  build.sh  hab4_pki_tree.bat  hab4_pki_tree.sh  hsm_add_key.sh  hsm_hab4_pki_tree.sh
src/tools/: CMakeLists.txt
src/tools/ahab_signature_block_parser/: CMakeLists.txt  README  common.py  parse_sig_blk.py
src/tools/ahab_signed_message/: CMakeLists.txt  ahab_signed_message.c
src/tools/ahab_split_container/: CMakeLists.txt  ahab_split_container.c
src/tools/convlb/: CMakeLists.txt  convlb.c
src/tools/cst/: CMakeLists.txt  cst.c
src/tools/hab_csf_parser/: CMakeLists.txt  csf_parser.c  csf_parser.h  extract_csf.c  extract_csf.h
src/tools/hab_log_parser/: CMakeLists.txt  hab_log_parser.c  hab_log_parser.h  usbhid.c  usbhid.h
src/tools/hab_srktool_scripts/: CMakeLists.txt  createSRKFuses  createSRKTable
src/tools/image_verifier/: CMakeLists.txt  ahab_image_verifier.c  hab4_image_verifier.c  verifier_helper.c  verifier_helper.h
src/tools/mac_dump/: CMakeLists.txt  hab4_mac_dump.c
src/tools/pki_tree/: CMakeLists.txt  add_key.c  ahab_pki_tree.c  hab4_pki_tree.c  pki_helper.c  pki_helper.h
src/tools/srktool/: CMakeLists.txt  srktool.c
